# rocm-ai-toolkit

./: .gitignore  CHANGELOG.md  README.md  activate-pytorch.bat  ai.bat  embed.bat  imagine.bat  pyproject.toml  rmbg.bat  segment.bat  showcase.py  test-gpu.py  torch.bat  transcribe.bat
.github/workflows/: ci.yml
aikit/: __init__.py  __main__.py  background.py  cli.py  core.py  embeddings.py  generators.py  segmentation.py  transcription.py
diagnostics/: .gitignore  README.md  build.bat  clock_probe.cpp  clock_probe.py  run_diagnostics.bat
docs/: SETUP_ROCM.md
tests/: conftest.py  test_background.py  test_cli.py  test_core.py  test_embeddings.py  test_generators.py  test_security.py  test_segmentation.py  test_transcription.py
tools/: DEPRECATED.md  aikit.py  embed.py  imagine.py  rmbg.py  segment.py  transcribe.py
