[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aikit"
version = "0.1.0"
description = "AI Toolkit - CLI tools and building blocks for local AI pipelines"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "diffusers",
    "accelerate",
    "compel",
    "peft",
    "controlnet-aux",
    "rembg[gpu]",
    "faster-whisper",
    "sentence-transformers",
    "segment-anything",
    "scikit-learn",
    "opencv-python",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
]

[project.scripts]
aikit = "aikit.cli:main"
imagine = "aikit.cli:imagine"
transcribe = "aikit.cli:transcribe"
embed = "aikit.cli:embed"
segment = "aikit.cli:segment"
rmbg = "aikit.cli:rmbg"

[tool.hatch.build.targets.wheel]
packages = ["aikit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: security-related tests",
    "gpu: tests that require GPU (skipped in CI)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tools/", "diagnostics/"]

[tool.coverage.run]
source = ["aikit"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
